vlib/v/checker/tests/from_string_on_non_enum_err.out
vlib/v/checker/tests/from_string_on_non_enum_err.vv:9:20: notice: unused parameter: `a`
    7 | }
    8 | 
    9 | fn Bar.from_string(a string) {}
      |                    ^
   10 | 
   11 | fn main() {
vlib/v/checker/tests/from_string_on_non_enum_err.vv:12:2: error: expected enum, but `Foo` is struct
   10 | 
   11 | fn main() {
   12 |     Foo.from_string('foo')
      |     ~~~~~~~~~~~~~~~~~~~~~~
   13 |     Bar.from_string('bar')
   14 | }
